--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https:fonts.googleapis.com/css?familyLato&display=swap');
+/* @import url('https:fonts.googleapis.com/css?familyLato&display=swap'); */
 
 .progress-container{
     background:gray;
